# rust-ws

./: .dockerignore  .gitignore  .railwayignore  Cargo.toml  Dockerfile  README.md  railway.toml
src/: db.rs  fix_errors.txt  main.rs
static/.well-known/: farcaster.json
templates/: index.html.hbs  todo-edit.html.hbs  todo-read.html.hbs
