[package]
name = "example-todo-app-rust-htmx"
version = "1.0.0"
edition = "2021"

[dependencies]

# db
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }

# web framework
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.0"

# templating
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# utilities
rand = "0.8.5"
tokio-stream = "0.1.15"
futures-util = "0.3.28"
